--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.10",
+    "inputmask": "^5.0.9",
     "json-server": "^1.0.0-alpha.21"
   },
   "devDependencies": {
